--- a/src/modals/certification/certificationModal.scss
+++ b/src/modals/certification/certificationModal.scss
@@ -1,3 +1,5 @@
+@import '../../global.scss';
+
 .cssModel {
     // width: 90%;
     // height: 70%;
@@ -12,9 +14,16 @@
     height: 505px;
     width: 100px;
     // background-color: transparent !important;
+
+    .modal-body {
+        @include reponsive {
+            overflow: scroll !important;
+        }
+    }
 }
 
 .modelImg {
     height: 401px;
     width: 765px;
+    overflow: scroll;
 }
